# PipeFirst

./: .gitignore  .travis.yml  README.md  dune-project  esy.lock.json  fast_pipe_ppx.opam  package.json  ppx_fast_pipe.opam  ppx_pipe_first.opam
ppx/: dune  ppx_fast_pipe.re
test/: TestFastPipe.re  dune
